--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "prime-codes",
   "version": "0.1.0",
+  "engines": {
+    "node": "11.11.0"
+  },
   "private": true,
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
